--- a/src/app/auth/sign-up/sign-up.module.css
+++ b/src/app/auth/sign-up/sign-up.module.css
@@ -54,7 +54,7 @@
     margin-bottom: 10px;
 }
 
-.rememberMeContainer{
+.alreadyHaveAnAccountContainer{
     width: 75% !important;
 }
 
@@ -64,7 +64,7 @@
     color:#A3A3A3;
 }
 
-.forgotPasswordText{
+.alreadyHaveAnAccountText{
     text-decoration: none;
     background: linear-gradient(135deg, #14ADD6, #384295);
     -webkit-background-clip: text;
@@ -74,6 +74,7 @@
     font-family: 'Nunito', sans-serif;
     line-height: 24px;
     font-size: 14px;
+    text-align: right;
 }
 
 .signUpButton{
@@ -90,7 +91,7 @@
 
 
 @media (max-width: 992px) {
-    .authInput,.signUpButton,.rememberMeContainer {
+    .authInput,.signUpButton,.alreadyHaveAnAccountContainer {
         width: 100% !important;
     }
 
