--- a/src/app/components/Header/header.css
+++ b/src/app/components/Header/header.css
@@ -1,54 +1,46 @@
 .header {
   background-color: #f8f9fd;
-  height: 7%;
+  height: 9.4vh;
   padding: 1%;
   display: flex;
-  justify-content: space-between;
+
 }
 
+.header_left {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
 .header_h1 {
-  margin-left: 1%;
   font-size: 20px;
-}
-.userName_header {
-  order: 1;
-}
-.userPosition_header {
-  margin-top: -16%;
-  order: 2;
-  font-size: 12px;
-  color: grey;
+  font-weight: 500;
 }
 .header_p {
-  margin-left: 1%;
-  margin-top: -1px;
-  font-size: 11px;
+  font-size: 13px;
+}
+
+.header_right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
 }
 
 .header_image {
   border-radius: 50%;
 }
-
-.header_left {
-  flex: 7;
-}
-.header_right {
-  flex: 1;
-  display: flex;
-}
 .header_perInfo {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   display: flex;
   flex-direction: column;
-  margin-left: 2%;
+  width: 80px;
 }
 
-.bi-bell-fill {
-  margin-top: 5%;
-  margin-right: 2.5%;
-}
+.userPosition_header {
 
+  font-size: 12px;
+  color: grey;
+}
 .bi-caret-down-fill {
-  margin-top: 2%;
-  margin-left: 1%;
+  justify-content: center;
 }
