--- a/src/app/dashboard/dashboardP.css
+++ b/src/app/dashboard/dashboardP.css
@@ -1,5 +1,19 @@
-.main_dashboard_beneath{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px; 
+.main_dashboard_div {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.main_dashboard_top {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  margin-left: 5%;
+}
+
+.main_dashboard_beneath {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 5%;
+  gap: 15px;
 }
