--- a/src/app/components/Menu/menu.css
+++ b/src/app/components/Menu/menu.css
@@ -1,10 +1,10 @@
 nav {
-  /*margin-top: 20%;*/
+  margin-top: 20%;
   width: 18rem;
 }
 
 .image {
-  /*margin-top: 20%;*/
+  margin-top: 20%;
 }
 
 .Link {
