--- a/src/app/layouts/main-layout.module.css
+++ b/src/app/layouts/main-layout.module.css
@@ -1,27 +1,22 @@
 .main {
     display: flex;
-    /*justify-content: space-between;*/
-
-    height: 100vh;
-    width: 100vw;
+    height:100%;
+    width:100%;
 }
 
 .right {
+    display:flex;
     flex: 1;
-    height: 100vh;
     background-color: rgb(138, 166, 154);
+    width: 100%;
+    flex-direction: column;
 }
 
 .left {
-    /*flex: 1;*/
-    /*background-color: red;*/
 }
 
 .content {
     background-color: red;
-    /*height: 100%;*/
+    min-height: 100%;
     display: flex;
-    /*flex: 1;*/
 }
-
-
