--- a/src/app/components/Footer/footer.css
+++ b/src/app/components/Footer/footer.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
-    background-color: #F8F9FD;
+    background-color:transparent;
 
     margin-top: auto;
 }
