--- a/src/app/dashboard/Dashboard.module.css
+++ b/src/app/dashboard/Dashboard.module.css
@@ -1,23 +1,31 @@
 .container {
     display: flex;
-    flex-direction: column;
-    gap: 15px;
-    background-color: #14ADD6;
     flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    /*background-color: blue; !*to check*!*/
+    gap: 15px;
+    /*background-color:transparent;*/
+
+
+    padding: 0 20px 0 20px;
+
+
 }
 
 .top {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: row;
-    gap: 15px;
+    /*background-color: #384295;*/
+    /*gap: 10px;*/
 }
 
 .body {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
     gap: 15px;
 }
