--- a/src/app/components/Header/header.css
+++ b/src/app/components/Header/header.css
@@ -1,15 +1,16 @@
 .header {
-  background-color: #f8f9fd;
+  background-color: transparent;
   display: flex;
   align-items: center;
   height: 9.4vh;
-  padding: 0 20px 0 10px;
+  padding: 0 20px 0 20px;
 }
 
 .header_left {
   flex: 1;
   display: flex;
   flex-direction: column;
+  /*padding-left:1.5%;*/
 }
 .header_h1 {
   font-size: 20px;
