--- a/src/app/components/Menu/menu.css
+++ b/src/app/components/Menu/menu.css
@@ -1,3 +1,12 @@
+.main_Menu {
+  display: flex;
+  flex-direction: column;
+  background-color: #FFFFFF;
+  align-items: center;
+  height: 100%;
+  width:18vw;
+}
+
 nav {
   margin-top: 20%;
   width: 18rem;
@@ -15,10 +24,4 @@ nav {
 .Link:hover {
   background-color: #F2F7FF;
 }
-.main_Menu {
-  display: flex;
-  flex-direction: column;
-  background-color: #FFFFFF;
-  align-items: center;
-  height: 100%;
-}
+
