--- a/src/app/components/Table/CustomTable/CustomTable.module.css
+++ b/src/app/components/Table/CustomTable/CustomTable.module.css
@@ -46,6 +46,36 @@
     max-height: 35vh;
 }
 
+.main::-webkit-scrollbar {
+    width: 20px;
+    /*scrollbar-gutter: stable both-edges;*/
+    /*height: 15px;*/
+}
+
+.main::-webkit-scrollbar-track {
+    /*background-color: #000000; !* Цвет фона дорожки *!*/
+    /*width: 30px; !* Ширина дорожки *!*/
+}
+
+.main::-webkit-scrollbar-thumb {
+    background: linear-gradient(135deg, #14ADD6 0%, #384295 100%);
+    border-radius: 20px;
+
+}
+
+/*!* Создаем палку для скроллера *!*/
+/*.main::-webkit-scrollbar-thumb::before {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 50%;*/
+/*    transform: translateX(-50%);*/
+/*    width: 2px; !* Ширина палки *!*/
+/*    height: 50px; !* Длина палки *!*/
+/*    background: #000; !* Цвет палки *!*/
+/*    border-radius: 4px; !* Закругленные углы *!*/
+/*    opacity: 0; !* Палка изначально невидима *!*/
+/*}*/
+
 .table {
     flex: 1;
     overflow-y: auto;
