--- a/src/app/components/Table/CustomTable/CustomTable.module.css
+++ b/src/app/components/Table/CustomTable/CustomTable.module.css
@@ -1,66 +1,66 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+
 .container {
-    display: flex;
-    flex-direction: column;
-    /*justify-content: space-between;*/
-    gap: 50px;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  /*justify-content: space-between;*/
+  gap: 50px;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    /*background-color: aquamarine;*/
+  display: flex;
+  justify-content: space-between;
+  /*background-color: aquamarine;*/
 }
 
 .button {
-    width: 250px;
-    height: 46px;
-    background: linear-gradient(135deg, #14ADD6 0%, #384295 100%);
-    border-radius: 10px;
-    border: none;
-    color: #fff;
-    font-size: 14px;
-    font-Weight: 400;
-    line-height: 24px;
-    transition: all 0.5s ease-in-out;
+  width: 250px;
+  height: 46px;
+  background: linear-gradient(135deg, #14add6 0%, #384295 100%);
+  border-radius: 10px;
+  border: none;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  transition: all 0.5s ease-in-out;
 }
 
 .title {
-    font-weight: 800;
-    font-family: 'Nunito', sans-serif;
-    font-size: 20px;
-    line-height: 28px;
+  font-weight: 800;
+  font-family: "Nunito", sans-serif;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .showPerPage {
-
 }
 
 .main {
-    flex: 1;
-    overflow-y: auto;
-    /*background-color: yellow;*/
-    /*padding: 5px;*/
-    max-height: 35vh;
+  flex: 1;
+  overflow-y: auto;
+  /*background-color: yellow;*/
+  /*padding: 5px;*/
+  max-height: 35vh;
 }
 
 .main::-webkit-scrollbar {
-    width: 20px;
-    /*scrollbar-gutter: stable both-edges;*/
-    /*height: 15px;*/
+  width: 20px;
+  /*scrollbar-gutter: stable both-edges;*/
+  /*height: 15px;*/
 }
 
 .main::-webkit-scrollbar-track {
-    /*background-color: #000000; !* Цвет фона дорожки *!*/
-    /*width: 30px; !* Ширина дорожки *!*/
+  /*background-color: #000000; !* Цвет фона дорожки *!*/
+  /*width: 30px; !* Ширина дорожки *!*/
 }
 
 .main::-webkit-scrollbar-thumb {
-    background: linear-gradient(135deg, #14ADD6 0%, #384295 100%);
-    border-radius: 20px;
-
+  background: linear-gradient(135deg, #14add6 0%, #384295 100%);
+  border-radius: 20px;
 }
 
 /*!* Создаем палку для скроллера *!*/
@@ -77,40 +77,47 @@
 /*}*/
 
 .table {
-    flex: 1;
-    overflow-y: auto;
-    cursor: pointer;
+  flex: 1;
+  overflow-y: auto;
+  cursor: pointer;
 }
 
 .footer {
-
 }
 
 .paginationContainer {
-    display:flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .paginationItem {
-    width: 40px;
-    height: 40px;
-    background: linear-gradient(135deg, #14ADD6 0%, #384295 100%);
-    border-radius: 5px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-
+  width: 40px;
+  height: 40px;
+  background: linear-gradient(135deg, #14add6 0%, #384295 100%);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .paginationItem > span {
-    font-size: 1rem;
-    color: #fff;
-
+  font-size: 1rem;
+  color: #fff;
 }
 
 .paginationItem {
-
 }
 
-
+.showPerPageInput {
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  text-align: center;
+  border: 2px solid #14add6;
+  color: #14add6;
+}
+.showPerPageSpan {
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+}
