all table bugs fixed, 1 logistic page created, dognut in dasboard is templatet

--- a/src/app/components/ChartCard/ChartCard.module.css
+++ b/src/app/components/ChartCard/ChartCard.module.css
@@ -55,12 +55,26 @@
   font-size: 15px;
 }
 
-.totalFigure {
+.totalFigure1 {
   border-radius: 40px;
   width: 6px;
   height: 20px;
-  background-color: red;
+  background-color:#F29425;
 }
+.totalFigure2 {
+  border-radius: 40px;
+  width: 6px;
+  height: 20px;
+  background-color: #10A242;
+}
+
+.totalFigure3 {
+  border-radius: 40px;
+  width: 6px;
+  height: 20px;
+  background-color: #E64F53;
+}
+
 
 .right {
   display: flex;
