--- a/src/app/components/Table/CustomTable/CustomTable.module.css
+++ b/src/app/components/Table/CustomTable/CustomTable.module.css
@@ -95,6 +95,7 @@
   height: 40px;
   background: linear-gradient(135deg, #14add6 0%, #384295 100%);
   border-radius: 5px;
+  margin-left: 2px;
   display: flex;
   align-items: center;
   justify-content: center;
