--- a/src/app/components/Table/table.css
+++ b/src/app/components/Table/table.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
 .table_div_main {
   width: 39.4vw;
   /*background-color: red; !*to check*!*/
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding: 15px 25px 15px 25px;
   border-radius: 15px;
 }
 
-.table_name_span{
+.table_name_span {
   font-weight: bolder;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-size: 20px;
 }
 
@@ -23,21 +23,20 @@
 
 .table_div::-webkit-scrollbar {
   width: 20px;
-
   /*scrollbar-gutter: stable both-edges;*/
   /*height: 15px;*/
 }
 
-.table_div::-webkit-scrollbar-track {
+/* .table_div::-webkit-scrollbar-track {
   /*background-color: #000000; !* Цвет фона дорожки *!*/
   /*width: 30px; !* Ширина дорожки *!*/
-}
 
 .table_div::-webkit-scrollbar-thumb {
-  background: linear-gradient(135deg, #14ADD6 0%, #384295 100%);
+  background: linear-gradient(135deg, #14add6 0%, #384295 100%);
   border-radius: 20px;
+  
 }
 
-.tr_table{
-  font-family: 'Nunito', sans-serif;
+.tr_table {
+  font-family: "Nunito", sans-serif;
 }
