--- a/src/app/components/Table/CustomTable/CustomTable.module.css
+++ b/src/app/components/Table/CustomTable/CustomTable.module.css
@@ -48,7 +48,7 @@
 }
 
 .main::-webkit-scrollbar {
-  width: 20px;
+  width: 1vw;
   /*scrollbar-gutter: stable both-edges;*/
   /*height: 15px;*/
 }
