--- a/src/app/components/Table/table.css
+++ b/src/app/components/Table/table.css
@@ -22,20 +22,25 @@
 }
 
 .table_div::-webkit-scrollbar {
-  width: 20px;
+  width: 1vw;
   /*scrollbar-gutter: stable both-edges;*/
   /*height: 15px;*/
 }
 
 /* .table_div::-webkit-scrollbar-track {
   /*background-color: #000000; !* Цвет фона дорожки *!*/
-  /*width: 30px; !* Ширина дорожки *!*/
+/*width: 30px; !* Ширина дорожки *!*/
 
 .table_div::-webkit-scrollbar-thumb {
   background: linear-gradient(135deg, #14add6 0%, #384295 100%);
   border-radius: 20px;
-  
 }
+
+/* .table_div::-webkit-scrollbar-track {
+  background-color:black;
+
+  
+} */
 
 .tr_table {
   font-family: "Nunito", sans-serif;
