profile module created

--- a/src/app/components/Table/table.css
+++ b/src/app/components/Table/table.css
@@ -2,7 +2,7 @@
 
 .table_div_main {
   width: 39.4vw;
-  /*background-color: red; !*to check*!*/
+  height: 34vh;
   background-color: #ffffff;
   padding: 15px 25px 15px 25px;
   border-radius: 15px;
