--- a/src/app/circulars/Circulars.module.css
+++ b/src/app/circulars/Circulars.module.css
@@ -62,7 +62,10 @@
   line-height: 24px;
   transition: all 0.5s ease-in-out;
 }
-
+.buttons:hover {
+ 
+  transform: scale(105%);
+}
 .circularsCount {
   font-size: 30px;
   font-weight: 800;
