--- a/src/app/components/ChartCard/ChartCard.module.css
+++ b/src/app/components/ChartCard/ChartCard.module.css
@@ -4,6 +4,7 @@
   display: flex;
   border-radius: 15px;
   width: 39.4vw;
+  height: 34vh;
   padding: 15px 25px 15px 25px;
   background-color: #ffffff;
   flex-direction: column;
