--- a/src/app/logistics/logistics-request/LogisticsRequest.module.css
+++ b/src/app/logistics/logistics-request/LogisticsRequest.module.css
@@ -8,7 +8,7 @@
   gap: 10px;
 }
 .main::-webkit-scrollbar {
-  width: 20px;
+  width: 0.5vw;
   /*scrollbar-gutter: stable both-edges;*/
   /*height: 15px;*/
 }
