--- a/src/app/circulars/create-ciruculas/createCiruculas.module.css
+++ b/src/app/circulars/create-ciruculas/createCiruculas.module.css
@@ -63,7 +63,9 @@
   transition: all 0.5s ease-in-out;
   margin-top: 20%;
 }
-
+.buttons:hover {
+  transform: scale(103%);
+}
 .bottom {
   padding-left: 14%;
 }
