--- a/src/app/logistics/logistics-details/logisticDetails.module.css
+++ b/src/app/logistics/logistics-details/logisticDetails.module.css
@@ -65,6 +65,11 @@
   margin-bottom: 0.3rem;
 }
 
+.buttons1:hover {
+  /*color: #d61414;*/
+  transform: scale(105%);
+}
+
 .body2 {
   display: flex;
   flex-direction: column;
