--- a/src/app/payroll/create-salary-definition/create-salary-definition.module.css
+++ b/src/app/payroll/create-salary-definition/create-salary-definition.module.css
@@ -1,7 +1,7 @@
 .MainContainer{
     background-color:#fff;
     border-radius: 15px;
-    padding: 20px;
+    padding: 50px 30px;
     margin:20px;
 }
 
