--- a/src/app/circulars/Circulars.module.css
+++ b/src/app/circulars/Circulars.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  padding: 20px 20px 20px 20px;
+  padding: 0 20px 20px 20px;
   gap: 10px;
 }
 
