--- a/src/app/office-budget/OfficeBudget.module.css
+++ b/src/app/office-budget/OfficeBudget.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex: 1;
     /*background-color: #78d614;*/
-    padding: 20px 20px 20px 20px;
+    padding: 0 20px 20px 20px;
+
     justify-content: space-between;
     flex-direction: column;
     gap: 15px;
