--- a/src/app/components/DropDownMenue/DropDownMenue.css
+++ b/src/app/components/DropDownMenue/DropDownMenue.css
@@ -1,27 +1,25 @@
 .dropDownMenuMain {
   position: relative;
-
 }
 
 .dropDownMenuBody {
   display: flex;
   flex-direction: column;
-  align-items:start;
-  justify-content:start;
+  align-items: start;
+  justify-content: start;
   gap: 15px;
   height: 10.5rem;
   width: 10.5rem;
   position: absolute;
-  right: 0.5rem;
-  top: calc(100% + 1.5rem);
+  right: 0.5rem; 
+  top: calc(100% + 2rem); 
   background-color: white;
   padding: 2rem;
   border-radius: 0.25rem;
   box-shadow: 2px 3px 6px 2px rgba(0, 0, 0, 0.3);
-  opacity: 0;
+  opacity: 1;
   transform: translateY(-10px);
   transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
-  pointer-events: none;
   z-index: 1;
 }
 
@@ -34,12 +32,6 @@
   background-color: white;
 }
 
-.dropDownMenuButton:hover {
-  /* background-color: green; */
-}
-
-.dropDownMenuMain > .dropDownMenuMainButton:focus + .dropDownMenuBody {
-  opacity: 1;
-  transform: translateY(0);
-  pointer-events: auto;
-}
+/* .dropDownMenuButton:hover {
+  background-color: green;
+} */
