--- a/src/app/components/Header/header.css
+++ b/src/app/components/Header/header.css
@@ -31,10 +31,11 @@
   border-radius: 50%;
 }
 .header_perInfo {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Nunito", sans-serif;
+
   display: flex;
   flex-direction: column;
-  width: 80px;
+  width: auto;
 }
 
 .userPosition_header {
@@ -46,3 +47,9 @@
   justify-content: center;
 }
 
+.userName_header{
+  font-size: 13px;
+  font-weight: 550;
+  color: black;
+
+}
