--- a/src/app/components/Table/CustomTable/CustomTable.module.css
+++ b/src/app/components/Table/CustomTable/CustomTable.module.css
@@ -36,6 +36,8 @@
   line-height: 30px;
 }
 
+
+
 .main {
   flex: 1;
   overflow-y: auto;
@@ -49,6 +51,7 @@
   /*scrollbar-gutter: stable both-edges;*/
   /*height: 15px;*/
 }
+
 
 .main::-webkit-scrollbar-thumb {
   background: linear-gradient(135deg, #14add6 0%, #384295 100%);
@@ -74,6 +77,8 @@
   cursor: pointer;
 }
 
+
+
 .paginationContainer {
   display: flex;
   flex-direction: row;
@@ -96,6 +101,7 @@
   color: #fff;
 }
 
+
 .showPerPageInput {
   width: 40px;
   height: 40px;
@@ -109,19 +115,17 @@
   font-weight: 600;
 }
 
-.view {
+.view{
   text-decoration: none;
   color: #14add6;
 }
 
-.edit {
-  border: none;
-  background-color: transparent;
+.edit{
+  text-decoration: none;
   color: #14add6;
 }
 
-.delete {
-  border: none;
-  background-color: transparent;
-  color: #ed3237;
+.delete{
+  text-decoration: none;
+  color: #ED3237;
 }
