--- a/src/app/memo/create-memo/create-memo.module.css
+++ b/src/app/memo/create-memo/create-memo.module.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     padding: 20px 20px 20px 20px;
     gap: 20px;
+    overflow-y: auto;
 }
 
 .top {
@@ -108,7 +109,7 @@
 .labelLeftBottom{
     display: flex;
     flex-direction:column;
-    gap: 5px;
+
 }
 
 .customRow{
